tests/bad_reserved_name_const.stderr
tests/bad_reserved_name_const.sl:2:7: error: SL2008: identifier prefix '__sl_' is reserved
tests/bad_reserved_name_const.sl:2:7: hint: SL2008: rename symbol to avoid '__sl_' prefix
