tests/bad_reserved_name_const.sl
const __sl_bad i32
